--- a/app/src/main/res/layout/activity_game_menu.xml
+++ b/app/src/main/res/layout/activity_game_menu.xml
@@ -39,6 +39,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:src="@drawable/roulet"
+        android:contentDescription="Roulette Game Icon"
         app:layout_constraintTop_toBottomOf="@id/settingsIcon"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp" />
