--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:orientation="vertical"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-    android:background="@drawable/siginbackground">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/siginbackground"
+    android:orientation="vertical">
+
     <EditText
         android:id="@+id/fullNameEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Full Name"
-        android:layout_margin="16dp" />
+        android:layout_margin="16dp"
+        android:hint="Full Name" />
 
     <!-- Email EditText -->
     <EditText
         android:id="@+id/emailEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Email"
         android:layout_below="@id/fullNameEditText"
         android:layout_margin="16dp"
+        android:hint="Email"
         android:inputType="textEmailAddress" />
 
     <!-- Password EditText -->
@@ -26,9 +27,9 @@
         android:id="@+id/passwordEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Password"
         android:layout_below="@id/emailEditText"
         android:layout_margin="16dp"
+        android:hint="Password"
         android:inputType="textPassword" />
 
     <!-- Birth Date EditText -->
@@ -36,9 +37,9 @@
         android:id="@+id/birthDateEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Birth Date (DD/MM/YYYY)"
         android:layout_below="@id/passwordEditText"
         android:layout_margin="16dp"
+        android:hint="Birth Date (DD/MM/YYYY)"
         android:inputType="date" />
 
     <!-- Pesel Number EditText -->
@@ -46,9 +47,9 @@
         android:id="@+id/peselEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Pesel Number"
         android:layout_below="@id/birthDateEditText"
         android:layout_margin="16dp"
+        android:hint="Pesel Number"
         android:inputType="number" />
 
     <!-- Register Button -->
@@ -56,7 +57,7 @@
         android:id="@+id/registerButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Register"
         android:layout_below="@id/peselEditText"
-        android:layout_margin="16dp" />
+        android:layout_margin="16dp"
+        android:text="Register" />
 </LinearLayout>
