--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="loading_screen_gradient_start">#E48122</color>
+    <color name="loading_screen_gradient_center">#BA9D0C</color>
+    <color name="loading_screen_gradient_center2">#138CA9</color>
+    <color name="loading_screen_gradient_end">#43DECA</color>
+
 </resources>
